force-app/main/default/objects/BillingEntity__c/BillingEntity__c.object-meta.xml
<CustomObject>
    <label>Entité de facturation</label>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entités de facturation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>