force-app/main/default/objects/BillingEntity__c/fields/CompanyCode__c.field-meta.xml
<CustomField>
    <fullName>CompanyCode__c</fullName>
    <label>Code société</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>