force-app/main/default/objects/BillingEntity__c/fields/IntracomVatNumber__c.field-meta.xml
<CustomField>
    <fullName>IntracomVatNumber__c</fullName>
    <label>TVA Intracom.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>