force-app/main/default/objects/BillingEntity__c/fields/InvoicePrefix__c.field-meta.xml
<CustomField>
    <fullName>InvoicePrefix__c</fullName>
    <label>Invoice prefix</label>
    <length>4</length>
    <type>Text</type>
</CustomField>