force-app/main/default/objects/BillingEntity__c/fields/ioConditions__c.field-meta.xml
<CustomField>
    <fullName>ioConditions__c</fullName>
    <label>CGV</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>