force-app/main/default/objects/BillingEntity__c/fields/LastInvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>LastInvoiceNumber__c</fullName>
    <label>Last invoice number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>