force-app/main/default/objects/BillingEntity__c/fields/logo__c.field-meta.xml
<CustomField>
    <fullName>logo__c</fullName>
    <label>Logo</label>
    <length>500</length>
    <type>Html</type>
</CustomField>