force-app/main/default/objects/BillingEntity__c/fields/RCS__c.field-meta.xml
<CustomField>
    <fullName>RCS__c</fullName>
    <label>RCS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>