force-app/main/default/objects/BillingEntity__c/fields/Siret__c.field-meta.xml
<CustomField>
    <fullName>Siret__c</fullName>
    <label>Siret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>