force-app/main/default/objects/BillingEntity__c/validationRules/Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Name</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Name )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Vous ne pouvez pas modifier le nom de l&apos;entité (impact sur les développements, voir avec votre administrateur)</errorMessage>
</ValidationRule>